core/target/include/zz/carrier_proto.h

typedef enum {
    protonerf_FieldType_Skip = 0,
    protonerf_FieldType_Int32 = 1,
    protonerf_FieldType_Int64 = 2,
    protonerf_FieldType_Uint32 = 3,
    protonerf_FieldType_Uint64 = 4,
    protonerf_FieldType_Sint32 = 5,
    protonerf_FieldType_Sint64 = 6,
    protonerf_FieldType_Bool = 7,
    protonerf_FieldType_Enum = 8,
    protonerf_FieldType_Fixed64 = 9,
    protonerf_FieldType_Sfixed64 = 10,
    protonerf_FieldType_Double = 11,
    protonerf_FieldType_String = 12,
    protonerf_FieldType_Bytes = 13,
    protonerf_FieldType_Message = 14,
    protonerf_FieldType_Repeated = 15,
    protonerf_FieldType_Fixed32 = 16,
    protonerf_FieldType_Sfixed32 = 17,
    protonerf_FieldType_Float = 18,

} protonerf_FieldType;
protonerf_FieldType carrier_proto_SubscribeRequestTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_BelltowerTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_ConfigResultTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_EmptyTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_PublishChangeTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_LocationVelocityTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_AuthListResultTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_ClaimTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_MemTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_NetRouteTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_TraceRequestTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_SwitchPortTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_NetworkGetTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_MoveInstructionTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_AuthorizationListTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_NetworkJoinTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_DhcpLeaseTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_AuthorizationTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_ProtoHeaderTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_UnpublishTypes (uintptr_t const  index);
protonerf_FieldType carrier_proto_BootloaderTypes (uintptr_t const  index);