core/target/rust/carrier_proto.rs


    #[link_name = "carrier_proto_SubscribeRequestTypes"]
    pub fn r#SubscribeRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_BelltowerTypes"]
    pub fn r#BelltowerTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_ConfigResultTypes"]
    pub fn r#ConfigResultTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_EmptyTypes"]
    pub fn r#EmptyTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_PublishChangeTypes"]
    pub fn r#PublishChangeTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_LocationVelocityTypes"]
    pub fn r#LocationVelocityTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_AuthListResultTypes"]
    pub fn r#AuthListResultTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_ClaimTypes"]
    pub fn r#ClaimTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_MemTypes"]
    pub fn r#MemTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_NetRouteTypes"]
    pub fn r#NetRouteTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_TraceRequestTypes"]
    pub fn r#TraceRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_SwitchPortTypes"]
    pub fn r#SwitchPortTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_NetworkGetTypes"]
    pub fn r#NetworkGetTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "carrier_proto_MoveInstructionTypes"]
    pub fn r#MoveInstructionTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_AuthorizationListTypes"]
    pub fn r#AuthorizationListTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_NetworkJoinTypes"]
    pub fn r#NetworkJoinTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_DhcpLeaseTypes"]
    pub fn r#DhcpLeaseTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_AuthorizationTypes"]
    pub fn r#AuthorizationTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_ProtoHeaderTypes"]
    pub fn r#ProtoHeaderTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_UnpublishTypes"]
    pub fn r#UnpublishTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "carrier_proto_BootloaderTypes"]
    pub fn r#BootloaderTypes( Zindex: usize)  -> super::protonerf::FieldType;

}
